--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
+    "module": "es6",
     "moduleResolution": "Node"
   },
   "include": ["vite.config.ts"]
