--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -29,6 +30,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
+    "sass": "^1.56.1",
     "typescript": "^4.5.5",
     "vite": "^2.9.12"
   },
