--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-ts-react-boilerplate",
+  "name": "blogspot",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -13,7 +13,8 @@
   "dependencies": {
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
