--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,9 @@
   "name": "blogspot",
   "main": "main.tsx",
   "version": "0.0.0",
-  "repository": {
-    "url": "git+https://github.com/Jonathan-Z49/blogspot/tree/main/client"
-  },
-  "homepage": "https://jonathan-z49.github.io/blogspot/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "serve": "vite preview",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
@@ -18,7 +12,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "gh-pages": "^5.0.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
